Add CoinCard component and styling for displaying cryptocurrency data